# bumperbot

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/bumperbot_examples/: simple_cpp_publisher
devel/lib/pkgconfig/: bumperbot_description.pc  bumperbot_examples.pc
devel/share/bumperbot_description/cmake/: bumperbot_descriptionConfig.cmake
devel/share/bumperbot_examples/cmake/: bumperbot_examplesConfig.cmake
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/config/: simple_controller.yaml
src/bumperbot_controller/launch/: controller.launch
src/bumperbot_description/: package.xml
src/bumperbot_description/launch/: display.launch  gazebo.launch
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf  bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_examples/: CMakeLists.txt  package.xml  turtlesim_kinematics.cpp
src/bumperbot_examples/include/bumperbot_examples/: turtlesim_kinematics.h
src/bumperbot_examples/nodes/: simple_publisher.cpp  turtlesim_kinematics_node.cpp
